Sidebar under the Services section was updated
Updated by Santhosh

--- a/outsourcing.html
+++ b/outsourcing.html
@@ -75,21 +75,21 @@
 			
 			</div>
 	<div id="body">
-		<div class="blog">
+		<div >
 			<div class="sidebar">
-				<h4></h4>
-				<ul>
+				
+				<ul class=MenuBarHorizontal>
 					<li>
-						<h3><span><a href="itservices.html">IT Service</a></span></h3>
+						<span><a href="itservices.html">IT Service</a></span>
 					</li>
 					<li>
-						<h3><span><a href="consulting.html">Consulting</a></span></h3>
+						<span><a href="consulting.html">Consulting</a></span>
 					</li>
 					<li>
-						<h3><span><a href="outsourcing.html">BPO</a></span></h3>
+						<span><a href="outsourcing.html">BPO</a></span>
 					</li>
 					<li>
-						<h3><span><a href="training.html">Training</a></span></h3>
+						<span><a href="training.html">Training</a></span>
 					</li>
 				</ul>
 			</div>
