Tables of Services are changed
Changed by Santhosh

--- a/consulting.html
+++ b/consulting.html
@@ -95,8 +95,10 @@
 				</ul>
 			</div>
 			<div class="content">
-				<p><input type="image" name="imageField1" id="imageField1" src="./images/Consulting1.jpeg" /></p>
-				<p><input type="image" name="imageField1" id="imageField1" src="./images/Consulting2.jpeg" /></p>
+				<!-- <p><input type="image" name="imageField1" id="imageField1" src="./images/Consulting1.jpeg" /></p>
+				<p><input type="image" name="imageField1" id="imageField1" src="./images/Consulting2.jpeg" /></p> -->
+				<object data=ConsultingServices.htm width="700" height="400"> <embed src=ConsultingServices.htm width="700" height="400"> </embed> Error: Embedded data could not be displayed. </object>
+				
 			</div>			
 		</div>
 	</div>
