--- a/itservices.html
+++ b/itservices.html
@@ -96,7 +96,9 @@
 				</ul>
 			</div>
 			<div class="content">
-				<p><input type="image" name="imageField1" id="imageField1" src="./images/ITServices.jpeg" /></p>
+				<!-- <p><input type="image" name="imageField1" id="imageField1" src="./images/ITServices.jpeg" /></p> -->
+				
+<object data=IT_Outsourcing.htm width="700" height="400"> <embed src=IT_Outsourcing.htm width="700" height="400"> </embed> Error: Embedded data could not be displayed. </object>
 				
 			</div>
 			
