--- a/outsourcing.html
+++ b/outsourcing.html
@@ -94,7 +94,9 @@
 				</ul>
 			</div>
 			<div class="content">
-				<p><input type="image" name="imageField1" id="imageField1" src="./images/BPO.jpeg" /></p>
+				<!-- <p><input type="image" name="imageField1" id="imageField1" src="./images/BPO.jpeg" /></p> -->
+				<object data=bpo.htm width="700" height="400"> <embed src=bpo.htm width="700" height="400"> </embed> Error: Embedded data could not be displayed. </object>
+				
 			</div>			
 		</div>
 	</div>
