--- a/training.html
+++ b/training.html
@@ -93,9 +93,10 @@
 				</ul>
 			</div>
 			<div class="content">
-				<p><input type="image" name="imageField1" id="imageField1" src="./images/Training1.jpeg" /></p>
+				<!-- <p><input type="image" name="imageField1" id="imageField1" src="./images/Training1.jpeg" /></p>
 				<p><input type="image" name="imageField1" id="imageField1" src="./images/Training2.jpeg" /></p>
-				<p><input type="image" name="imageField1" id="imageField1" src="./images/Training3.jpeg" /></p>
+				<p><input type="image" name="imageField1" id="imageField1" src="./images/Training3.jpeg" /></p> -->
+				<object data=Training_Services.htm width="700" height="400"> <embed src=Training_Services.htm width="700" height="400"> </embed> Error: Embedded data could not be displayed. </object>
 			</div>			
 		</div>
 	</div>
