added google verification meta tag for Google
by Rajesh

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!-- Microdata markup added by Google Structured Data Markup Helper. -->
 <html><head>
 	<meta charset="UTF-8"/>
+    <meta name="google-site-verification" content="6GrRQD7Ji1AR7eDdRzXlPdmNjomxsy8It3y3E_3NDDQ" />
 	<title>Magnis 3 Consulting</title>
 	<script src="scripts/SpryMenuBar.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="css/style.css" type="text/css"/>
@@ -24,13 +25,16 @@
 <link rel="stylesheet" type="text/css" href="sliderengine/template.css"/></head>
 
 <body style="">
-	<div class="topnav"><a href="index.html" title="Home" class="nav_links">Home</a> | <a href="contact.html" title="Contact Us" class="nav_links">Contact Us </a> | <a href="https://www.blogger.com/blogger.g?blogID=2902798142606415560#allposts" title="Blogs &amp; Articles" target="_blank" class="nav_links">Blogs &amp; Articles</a> | <a href="#" title="Sitemap" class="nav_links">Sitemap</a> 
+	<div itemscope itemtype="http://schema.org/Product" class="topnav"><a itemprop="url" href="index.html" title="Home" class="nav_links">Home</a> | <a href="contact.html" title="Contact Us" class="nav_links">Contact Us </a> | <a href="https://www.blogger.com/blogger.g?blogID=2902798142606415560#allposts" title="Blogs &amp; Articles" target="_blank" class="nav_links">Blogs &amp; Articles</a> | <a href="#" title="Sitemap" class="nav_links">Sitemap</a> 
     <span class="social">
     <span itemscope itemtype="http://schema.org/Product"><a itemprop="url" href="https://twitter.com/Magnis3Consult/" title="Linkedin Magnis Consult" target="_blank"><img src="./images/tw.png" width="25" height="27" border="0" align="absmiddle" style="margin-left:20px;"></a></span>
      
     <span itemscope itemtype="http://schema.org/Product"><a itemprop="url" href="http://www.facebook.com/magnis3consulting" target="_blank" title="Facebook Magnis Consult"><img src="./images/facebook.gif" width="25" height="27" align="absmiddle" longdesc="images/slideshare.gif"></a></span>
      <span itemscope itemtype="http://schema.org/Product"><a itemprop="url" href="http://www.linkedin.com/in/magnis3consulting" target="_blank" title="Magnis3 Consulting"><img src="./images/linkdin.gif" width="25" height="27" align="absmiddle" longdesc="./images/linkdin.gif"></a></span>
      </span>
+     <meta itemprop="description" content="Training, Consulting, BPO, IT Infrastructure Services">
+<meta itemprop="image" content="http://www.magnis3consulting.com/Images/Logo.png">
+<meta itemprop="name" content="Magnis 3 Consulting">
      </div>
 </div>
 	<div id="header">
