added jquery for the services
by Santhosh L

--- a/clients.html
+++ b/clients.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Clients - Magnis 3 Consulting</title>
+	<title>Partners - Magnis 3 Consulting</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<script src="scripts/SpryMenuBar.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
@@ -77,7 +77,7 @@ $(document).ready(function(){
 							<a href="services.html">Services</a>
 						</li>
 						<li>
-							<a href="clients.html">Clients</a>
+							<a href="clients.html">Partners</a>
 						</li>
 						<li>
 							<a href="about.html">About</a>
