--- a/services.html
+++ b/services.html
@@ -69,7 +69,7 @@
 							<a href="services.html">Services</a>
 						</li>
 						<li>
-							<a href="clients.html">Clients</a>
+							<a href="clients.html">Partners</a>
 						</li>
 						<li>
 							<a href="about.html">About</a>
@@ -83,7 +83,7 @@
 			</div>
 	<div id="body">
 		<div >
-		
+	
 			<div class="sidebar">
 				<br>
 				<br>
@@ -103,7 +103,9 @@
 				</ul>
 			</div>
 			<div class="content">
-				<p><input type="image" name="imageField1" id="imageField1" src="./images/services.png" /></p>
+			<br>
+ 
+				<p align="center"><input type="image" height="300em" width="300em" name="imageField1" id="imageField1" src="./images/services.png" /></p>
 			</div>
 			
 		</div>
