--- a/TermsandConditions.html
+++ b/TermsandConditions.html
@@ -62,7 +62,7 @@
 							<a href="services.html">Services</a>
 						</li>
 						<li>
-							<a href="clients.html">Clients</a>
+							<a href="clients.html">Partners</a>
 						</li>
 						<li>
 							<a href="about.html">About</a>
