--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 							<a href="services.html">Services</a>
 						</li>
 						<li>
-							<a href="clients.html">Clients</a>
+							<a href="clients.html">Partners</a>
 						</li>
 						<li>
 							<a href="about.html">About</a>
@@ -86,7 +86,28 @@
 		<br><br>
 			We are eager to try new things and to repeat well-proven successes. We love what we do and love sharing our knowledge capital with like-minded thinkers, doers and innovators.
 		</p>
+		<div class="blog">
+
+			<div class="content">
+			    <div class="clients">
+			 	<table>				
+				<tr>
+					<td height="100px" width="100px" align="center"><img src="./images/clients/sw2.jpeg" width="72px" height="72px"></td>
+					<td height="100px" width="100px" align="center"><img src="./images/clients/springpeople.jpeg" width="96px" height="96px"></td>
+					<td height="100px" width="100px" align="center"><img src="./images/clients/samsung.jpeg" width="79.5px" height="100px"></td>
+					<td height="100px" width="100px" align="center"><img src="./images/clients/simplilearn.jpeg" width="88px" height="65.5px"></td>
+					<td height="100px" width="100px" align="center"><img src="./images/clients/conviction.jpeg" width="100px" height="50px"></td>
+					<td height="100px" width="100px" align="center"><img src="./images/clients/Adept.jpg" width="50px" height="50px"></td>
+					<td height="100px" width="100px" align="center"><img src="./images/clients/Amrita.jpeg" width="92px" height="27px"></td>
+				</tr>
+				
+				</table>
+			    </div>
+			</div>			
+		</div>
 	</div>
+	
+	
 
   <div id="footerCopyright">
   <div class="container-12">
