modified the Slideshow in the landing page
by Santhosh

--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
 			
 			</div>
 		<br>
-		<div id='hislider1' style="max-width:960px;  max-height:360px; margin: 0 auto;">
-
-			<ul style="display: none;overflow: hidden; height: 0; visibility: hidden; opacity: 0;">
+		<div>
+		<!-- <div id='hislider1' style="max-width:960px;  max-height:360px; margin: 0 auto;">
+			 -->
+			<!-- <ul style="display: none;overflow: hidden; height: 0; visibility: hidden; opacity: 0;">
 				<li>
 				<div>
 				<img data-src="dataimages/ILT.png" data-thumb-src="dataimages/ILT-th.png" title="Intractive Training" alt="Our training sessions are very intersting, as we are keen to make them interactive" data-content-type="image" data-content="" data-interval="-1"/>
@@ -79,8 +80,9 @@
 				</div>
 				</li>
 				</ul>
-
-
+ -->
+ <img src="./images/bannerANi.gif" width="960" height="340"> 
+	
 		</div>
 	</div>
 	<br>
