more changes to Slideshow
Santhosh

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" href="css/SpryMenuBarHorizontal.css" type="text/css">
 	<script type="text/javascript" src="sliderengine/jquery.js"></script><script type="text/javascript" src="sliderengine/jquery.hislider.js"></script>
+	<link href="css/js-image-slider.css" rel="stylesheet" type="text/css" />
+    <script src="scripts/js-image-slider.js" type="text/javascript"></script>
+    <link href="generic.css" rel="stylesheet" type="text/css" />
 <style>
 #containernav {
     border-bottom: 1px solid #D8D8D8;
@@ -63,10 +66,10 @@
 			
 			</div>
 		<br>
-		<div>
+		<div width="645" height="340">
 		<!-- <div id='hislider1' style="max-width:960px;  max-height:360px; margin: 0 auto;">
-			 -->
-			<!-- <ul style="display: none;overflow: hidden; height: 0; visibility: hidden; opacity: 0;">
+			
+			<ul style="display: none;overflow: hidden; height: 0; visibility: hidden; opacity: 0;">
 				<li>
 				<div>
 				<img data-src="dataimages/ILT.png" data-thumb-src="dataimages/ILT-th.png" title="Intractive Training" alt="Our training sessions are very intersting, as we are keen to make them interactive" data-content-type="image" data-content="" data-interval="-1"/>
@@ -78,12 +81,29 @@
 				<img data-src="dataimages/ILT2.jpg" data-thumb-src="dataimages/ILT2-th.jpg" title="Instructor Lead Training Session" alt="We believe meeting face to face with our customers and our audience. Therefore, we recommend for Instructor Lead Training Sessions to our customers." data-content-type="image" data-content="" data-interval="-1"/>
 				 <div data-type="effect" data-effect-type="Random"></div>
 				</div>
-				</li>
+				</li>             
 				</ul>
- -->
- <img src="./images/bannerANi.gif" width="960" height="340"> 
+
+ <img src="./images/bannerANi.gif" width="945" height="340"> 
 	
-		</div>
+		</div> -->
+		
+		   <div id="sliderFrame" >
+        <div id="slider" >
+            <img src="images/ILT1.png" alt="Magnis3 Consulting" />
+            <img src="images/slide4.jpg" alt="Business Process Outsourcing" />
+            <img src="images/slide3.png" alt="Management Skills Training" />
+            <img src="images/odcs-image-960x360-960x360.jpg" alt="Individual Training"/>
+            <img src="images/slider-consulting-01.png" alt="Power Consulting"/>
+            <img src="images/chess.png" alt="Leader in Consulting" />
+            <img src="images/remote_development.jpg" alt="Cloud Enablement" />
+             <img src="images/cloudedit2.png" alt="Cloud Training"/>
+              <img src="images/data-centre-1.jpg" alt="Infrastructure Maintenance" />
+        </div>
+        <div id="htmlcaption" style="display: none;">
+            <em>HTML</em> caption. Link to <a href="http://www.google.com/">Google</a>.
+        </div>
+    </div>
 	</div>
 	<br>
 
