removed address and phone number
Rajesh

--- a/contact.html
+++ b/contact.html
@@ -64,24 +64,9 @@
 		<div class="article">
 			
 			<ul>
-			<h3>Contact us</h3>
-				<li>
-					<span>Address : </span> Magnis 3 Consulting
-				</li>
-				<li>
-					<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> #91, 14th Main, 17th Cross,
-				</li>
-				<li>
-					<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Sector 4, HSR Layout,
-				</li>
-				<li>
-					<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Bangalore - 560102
-				</li>
-				<li><br>
-					<span>Email : </span> contact@magnis3consulting.com
-				</li>
-				<li><br>
-					<span>Phone Number : </span> +91 819 729 1736
+			<h3>Contact us<br>
+				<span>Email : </span> contact@magnis3consulting.com			  </h3>
+			  <li><br>
 				</li>
 				<li><iframe src="https://docs.google.com/forms/d/1KWoc2JpA3n9ijiW5hh05G76Jc3jSZASIEo8erBFJsn8/viewform?embedded=true" width="900" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></li>
 			</ul>
